Fixed dependencies for new python-gtk and Pardus 2011.

--- a/programming/language/python/python-goocanvas/pspec.xml
+++ b/programming/language/python/python-goocanvas/pspec.xml
@@ -14,12 +14,12 @@
         <Description>PyGoocanvas are the python bindings for GooCanvas which is a canvas widget for GTK+ that uses the cairo 2D library for drawing.</Description>
         <Archive sha1sum="e51d4721b3dd3c1b104a70eb66d79e54197123cf" type="tarbz2">mirrors://gnome/pygoocanvas/0.14/pygoocanvas-0.14.1.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>python-pygobject</Dependency>
-            <Dependency>pygtk-devel</Dependency>
-            <Dependency>python-cairo</Dependency>
-            <Dependency>cairo</Dependency>
-            <Dependency>gtk2</Dependency>
-            <Dependency>goocanvas</Dependency>
+            <Dependency>python-pygobject-devel</Dependency>
+            <Dependency>python-gtk-devel</Dependency>
+            <Dependency>python-cairo-devel</Dependency>
+            <Dependency>cairo-devel</Dependency>
+            <Dependency>gtk2-devel</Dependency>
+            <Dependency>goocanvas-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch level="1">fix-segfault.patch</Patch>
@@ -30,7 +30,7 @@
         <Name>python-goocanvas</Name>
         <RuntimeDependencies>
             <Dependency>python-pygobject</Dependency>
-            <Dependency>pygtk</Dependency>
+            <Dependency>python-gtk</Dependency>
             <Dependency>python-cairo</Dependency>
             <Dependency>cairo</Dependency>
             <Dependency>gtk2</Dependency>
@@ -44,6 +44,15 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-11-27</Date>
+            <Version>0.14.1</Version>
+            <Comment>
+                * Fix dependencies.
+            </Comment>
+            <Name>Gökmen Görgen</Name>
+            <Email>gkmngrgn@gmail.com</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-13</Date>
             <Version>0.14.1</Version>
