--- a/programming/language/python/python-gtksourceview/pspec.xml
+++ b/programming/language/python/python-gtksourceview/pspec.xml
@@ -14,7 +14,7 @@
         <Description>python-pygtksourceview provides Python bindings of gtksourceview.</Description>
         <Archive sha1sum="2a8da2ade949b5d89d3217809ecb4a19127590ab" type="tarbz2">mirrors://gnome/pygtksourceview/2.10/pygtksourceview-2.10.1.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>pygtk-devel</Dependency>
+            <Dependency>python-gtk-devel</Dependency>
             <Dependency>gtk-doc</Dependency>
             <Dependency>gtk2-devel</Dependency>
             <Dependency>gtksourceview-devel</Dependency>
@@ -28,7 +28,7 @@
     <Package>
         <Name>python-gtksourceview</Name>
         <RuntimeDependencies>
-            <Dependency>pygtk</Dependency>
+            <Dependency>python-gtk</Dependency>
             <Dependency>gtk2</Dependency>
             <Dependency>gtksourceview</Dependency>
         </RuntimeDependencies>
@@ -43,6 +43,13 @@
     </Package>
 
     <History>
+        <Update release="7">
+            <Date>2010-11-27</Date>
+            <Version>2.10.0</Version>
+            <Comment>Update package name of pygtk.</Comment>
+            <Name>Gökmen Görgen</Name>
+            <Email>gkmngrgn@gmail.com</Email>
+        </Update>
         <Update release="6">
             <Date>2010-10-30</Date>
             <Version>2.10.0</Version>
