add missing dependency.

--- a/programming/language/python/python-gtksourceview/pspec.xml
+++ b/programming/language/python/python-gtksourceview/pspec.xml
@@ -19,6 +19,7 @@
             <Dependency>gtk2-devel</Dependency>
             <Dependency>gtksourceview-devel</Dependency>
             <Dependency>docbook-xml4_1_2</Dependency>
+            <Dependency releaseFrom="16">python-pygobject-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch level="1">python-underlinking.patch</Patch>
@@ -31,6 +32,7 @@
             <Dependency>python-gtk</Dependency>
             <Dependency>gtk2</Dependency>
             <Dependency>gtksourceview</Dependency>
+            <Dependency releaseFrom="16">python-pygobject</Dependency>
         </RuntimeDependencies>
         <Replaces>
             <Package>python-pygtksourceview</Package>
@@ -44,9 +46,12 @@
 
     <History>
         <Update release="7">
-            <Date>2010-11-27</Date>
+            <Date>2010-11-28</Date>
             <Version>2.10.0</Version>
-            <Comment>Update package name of pygtk.</Comment>
+            <Comment>
+                * Update package name of pygtk.
+                * Add missing dependency.
+            </Comment>
             <Name>Gökmen Görgen</Name>
             <Email>gkmngrgn@gmail.com</Email>
         </Update>
