define releaseFrom for python-pygobject

--- a/programming/language/python/python-goocanvas/pspec.xml
+++ b/programming/language/python/python-goocanvas/pspec.xml
@@ -14,7 +14,7 @@
         <Description>PyGoocanvas are the python bindings for GooCanvas which is a canvas widget for GTK+ that uses the cairo 2D library for drawing.</Description>
         <Archive sha1sum="e51d4721b3dd3c1b104a70eb66d79e54197123cf" type="tarbz2">mirrors://gnome/pygoocanvas/0.14/pygoocanvas-0.14.1.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>python-pygobject-devel</Dependency>
+            <Dependency releaseFrom="16">python-pygobject-devel</Dependency>
             <Dependency>python-gtk-devel</Dependency>
             <Dependency>python-cairo-devel</Dependency>
             <Dependency>cairo-devel</Dependency>
@@ -29,7 +29,7 @@
     <Package>
         <Name>python-goocanvas</Name>
         <RuntimeDependencies>
-            <Dependency>python-pygobject</Dependency>
+            <Dependency releaseFrom="16">python-pygobject</Dependency>
             <Dependency>python-gtk</Dependency>
             <Dependency>python-cairo</Dependency>
             <Dependency>cairo</Dependency>
