- New Version   - Shadow support added for Pds.Gui   - Fixed garbage collection

--- a/programming/language/python/pardus-desktop-services/pspec.xml
+++ b/programming/language/python/pardus-desktop-services/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Pardus Desktop Services</Summary>
         <Description>pardus-desktop-services is a wrapper python module for integrating various desktop environments using PyQt.</Description>
-        <Archive sha1sum="8667645cae654353b8c9724da4a191509e63d3f1" type="targz">http://cekirdek.pardus.org.tr/~gokmen/files/pds-1.1.1.tar.gz</Archive>
+        <Archive sha1sum="010400dc9de252f7cb333f9e901f0475b8ab9904" type="targz">http://cekirdek.pardus.org.tr/~gokmen/files/pds-1.2.1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-qt</Dependency>
         </BuildDependencies>
@@ -30,6 +30,17 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2010-12-01</Date>
+            <Version>1.2.1</Version>
+            <Comment>
+                - New Version
+                - Shadow support added for Pds.Gui
+                - Fixed garbage collection
+            </Comment>
+            <Name>Gökmen Göksel</Name>
+            <Email>gokmen@pardus.org.tr</Email>
+        </Update>
         <Update release="5">
             <Date>2010-11-09</Date>
             <Version>1.1.1</Version>
