change archive address

--- a/programming/language/python/python-rpy/pspec.xml
+++ b/programming/language/python/python-rpy/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>library</IsA>
         <Summary>A very simple, yet robust, Python interface to the R Programming Language</Summary>
         <Description>RPy is a very simple, yet robust, Python interface to the R Programming Language.</Description>
-        <Archive sha1sum="d068d985c573e93f9af5d0953be53c470f313cbc" type="targz">mirrors://sourceforge/rpy/rpy2-2.1.9.tar.gz</Archive>
+        <Archive sha1sum="d068d985c573e93f9af5d0953be53c470f313cbc" type="targz">http://pypi.python.org/packages/source/r/rpy2/rpy2-2.1.9.tar.gz</Archive>
        <BuildDependencies>
            <Dependency>python-numpy</Dependency>
            <Dependency>R-devel</Dependency>
