docs depends on main package

--- a/programming/language/python/python-configobj/pspec.xml
+++ b/programming/language/python/python-configobj/pspec.xml
@@ -25,6 +25,9 @@
     <Package>
         <Name>python-configobj-docs</Name>
         <Summary>python-configobj documentation files</Summary>
+        <RuntimeDependencies>
+            <Dependency release="current">python-configobj</Dependency>
+        </RuntimeDependencies>
         <Files>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
