--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -63,6 +63,8 @@
             <Patch level="1">add-kdepim44-translations.diff</Patch>
 
             <Patch level="1">fix-details-translation.diff</Patch>
+
+            <Patch level="1">may-to-mayis.patch</Patch>
         </Patches>
     </Source>
     <Package>
@@ -88,6 +90,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="57">
+            <Date>2010-12-05</Date>
+            <Version>4.5.3</Version>
+            <Comment>Fix wrong translation of may, the month (#15464).</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="56">
             <Date>2010-11-17</Date>
             <Version>4.5.3</Version>
