--- a/programming/language/python/python-bytecodeassembler/pspec.xml
+++ b/programming/language/python/python-bytecodeassembler/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>library</IsA>
         <Summary>A library for generating Python code objects by "assembling" bytecode</Summary>
         <Description>python-bytecodeassembler is a simple bytecode assembler module that handles most low-level bytecode generation details like jump offsets, stack size tracking, line number table generation, constant and variable name index tracking, etc.</Description>
-        <Archive sha1sum="ad9905379855c02df77ef44ad84c1ec6cfa144f4" type="zip">http://pypi.python.org/packages/source/B/BytecodeAssembler/BytecodeAssembler-0.5.1.zip</Archive>
+        <Archive sha1sum="f6d29d23a6ed7ddda3005809f5572fa950f6e240" type="zip">http://pypi.python.org/packages/source/B/BytecodeAssembler/BytecodeAssembler-0.6.zip</Archive>
     </Source>
 
     <Package>
@@ -29,6 +29,16 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-12-08</Date>
+            <Version>0.6</Version>
+            <Comment>
+                Version bump;
+                - Symbolic disassembly with full emulation of backward-compatible JUMP_IF_TRUE and JUMP_IF_FALSE opcodes on Python 2.7
+            </Comment>
+            <Name>Fethican Coşkuner</Name>
+            <Email>fethicanc@gmail.com</Email>
+        </Update>
         <Update release="1">
             <Date>2009-11-30</Date>
             <Version>0.5.1</Version>
