--- a/programming/language/python/python-peak-rules/pspec.xml
+++ b/programming/language/python/python-peak-rules/pspec.xml
@@ -13,13 +13,13 @@
         <IsA>library</IsA>
         <Summary>A highly-extensible framework for creating and using generic functions</Summary>
         <Description>python-peak-rules is a highly-extensible framework for creating and using generic functions, from the very simple to the very complex.Out of the box, it supports multiple-dispatch on positional arguments using tuples of types, full predicate dispatch using strings containing Python expressions, and CLOS-like method combining.</Description>
-        <Archive sha1sum="c761b7cad9e321330779f3b5577aeaea73f8b0d7" type="targz">http://stdhomes.ieu.edu.tr/~fethicancoskuner/paketler/PEAK-Rules-0.5a1.dev-r2600.tar.gz</Archive>
+        <Archive sha1sum="515558581fc19451f63964f645f2aec789067329" type="targz">http://peak.telecommunity.com/snapshots/PEAK-Rules-0.5a1.dev-r2686.tar.gz</Archive>
     </Source>
 
     <Package>
         <Name>python-peak-rules</Name>
         <RuntimeDependencies>
-            <Dependency>python-bytecodeassembler</Dependency>
+            <Dependency versionFrom="0.6">python-bytecodeassembler</Dependency>
             <Dependency>python-decoratortools</Dependency>
             <Dependency>python-addons</Dependency>
             <Dependency>python-extremes</Dependency>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2010-12-08</Date>
+            <Version>0.5_alpha1</Version>
+            <Comment>Version bump to snapshot r2686. Fixes 'JUMP_IF_FALSE' error.</Comment>
+            <Name>Fethican Coşkuner</Name>
+            <Email>fethicanc@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2010-03-31</Date>
             <Version>0.5_alpha1</Version>
