From 0.5.2 , license is changed with Apache-2.0 .

--- a/programming/language/python/python-bytecodeassembler/pspec.xml
+++ b/programming/language/python/python-bytecodeassembler/pspec.xml
@@ -8,8 +8,7 @@
             <Name>Fethican Coşkuner</Name>
             <Email>fethicanc@gmail.com</Email>
         </Packager>
-        <License>ZPL</License>
-        <License>PSF-2.4</License>
+        <License>Apache-2.0</License>
         <IsA>library</IsA>
         <Summary>A library for generating Python code objects by "assembling" bytecode</Summary>
         <Description>python-bytecodeassembler is a simple bytecode assembler module that handles most low-level bytecode generation details like jump offsets, stack size tracking, line number table generation, constant and variable name index tracking, etc.</Description>
@@ -35,6 +34,7 @@
             <Comment>
                 Version bump;
                 - Symbolic disassembly with full emulation of backward-compatible JUMP_IF_TRUE and JUMP_IF_FALSE opcodes on Python 2.7
+                - From 0.5.2 , license is changed with Apache-2.0 .
             </Comment>
             <Name>Fethican Coşkuner</Name>
             <Email>fethicanc@gmail.com</Email>
