--- a/programming/language/perl/perl-HTML-Tree/pspec.xml
+++ b/programming/language/perl/perl-HTML-Tree/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>A Perl module that build and scan parse-trees of HTML</Summary>
         <Description>Build and scan parse-trees of HTML. It allows to represent,create and extract information from HTML syntax trees.</Description>
-        <Archive sha1sum="78689f1fd026f03432e886c6b4b49f7d4d89aa8b" type="targz">mirrors://cpan/authors/id/J/JF/JFEARN/HTML-Tree-4.0.tar.gz</Archive>
+        <Archive sha1sum="78689f1fd026f03432e886c6b4b49f7d4d89aa8b" type="targz">mirrors://cpan/authors/id/J/JF/JFEARN/HTML-Tree-4.1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
             <Dependency>perl-HTML-Tagset</Dependency>
@@ -43,6 +43,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2010-12-08</Date>
+            <Version>4.1</Version>
+            <Comment>Bump to newest version</Comment>
+            <Name>Fatih Arslan</Name>
+            <Email>farslan@pardus.org.tr</Email>
+        </Update>
         <Update release="2">
             <Date>2010-10-13</Date>
             <Version>4.0</Version>
