Recompile for ABI breakage in ethumb package.

--- a/programming/language/python/python-ethumb/pspec.xml
+++ b/programming/language/python/python-ethumb/pspec.xml
@@ -15,11 +15,11 @@
         <!--<Archive sha1sum="aaa129a80e1522248ba12f4379faa4b894384503" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-ethumb-0.2_49588.tar.bz2</Archive>-->
         <Archive sha1sum="a0e5b50be5c978222b91b97be4adbf18f5ad2228" type="tarbz2">http://download.enlightenment.org/snapshots/2010-11-12/BINDINGS/python/python-ethumb-0.7.3.54504.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="1.0.0_beta2">eina-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta2">evas-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta2">ecore-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta2">e_dbus-devel</Dependency>
-            <Dependency versionFrom="0.1.1_54472">ethumb-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">eina-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">ecore-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">e_dbus-devel</Dependency>
+            <Dependency versionFrom="0.1.1_55225">ethumb-devel</Dependency>
             <Dependency versionFrom="0.7.3_54504">python-evas-devel</Dependency>
         </BuildDependencies>
     </Source>
@@ -27,11 +27,11 @@
     <Package>
         <Name>python-ethumb</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="1.0.0_beta2">eina</Dependency>
-            <Dependency versionFrom="1.0.0_beta2">evas</Dependency>
-            <Dependency versionFrom="1.0.0_beta2">ecore</Dependency>
-            <Dependency versionFrom="1.0.0_beta2">e_dbus</Dependency>
-            <Dependency versionFrom="0.1.1_54472">ethumb</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">eina</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">ecore</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">e_dbus</Dependency>
+            <Dependency versionFrom="0.1.1_55225">ethumb</Dependency>
             <Dependency versionFrom="0.7.3_54504">python-evas</Dependency>
         </RuntimeDependencies>
         <Files>
@@ -43,6 +43,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-12-09</Date>
+            <Version>0.7.3_54504</Version>
+            <Comment>Recompile for ABI breakage in ethumb package.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-11-13</Date>
             <Version>0.7.3_54504</Version>
