--- a/programming/language/python/python-elementary/pspec.xml
+++ b/programming/language/python/python-elementary/pspec.xml
@@ -13,12 +13,12 @@
         <Summary>Elementary Python binding</Summary>
         <Description>python-elementary is the Python binding of Elementary widget set.</Description>
         <!--<Archive sha1sum="b50813a3cc910b704f2ff712dd96ace84e353c9f" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-elementary-0.5.0_49588.tar.bz2</Archive>-->
-        <Archive sha1sum="64fa36eeff4062c0179810316b9b94320d5c0fc5" type="tarbz2">http://download.enlightenment.org/snapshots/2010-11-12/BINDINGS/python/python-elementary-0.7.3.54504.tar.bz2</Archive>
+        <Archive sha1sum="0d4b15d52bf3a5aaba8085127b82c43a55215613" type="tarbz2">http://download.enlightenment.org/snapshots/2010-12-03/BINDINGS/python/python-elementary-0.7.3.54504.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="1.0.0_beta2">eina-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta2">evas-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta2">ecore-devel</Dependency>
-            <Dependency versionFrom="0.7.0_54504">elementary-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">eina-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">ecore-devel</Dependency>
+            <Dependency versionFrom="0.7.0_55225">elementary-devel</Dependency>
             <Dependency versionFrom="0.7.3_54504">python-evas-devel</Dependency>
         </BuildDependencies>
         <Patches>
@@ -29,10 +29,10 @@
     <Package>
         <Name>python-elementary</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="1.0.0_beta2">eina</Dependency>
-            <Dependency versionFrom="1.0.0_beta2">evas</Dependency>
-            <Dependency versionFrom="1.0.0_beta2">ecore</Dependency>
-            <Dependency versionFrom="0.7.0_54504">elementary</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">eina</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta3">ecore</Dependency>
+            <Dependency versionFrom="0.7.0_55225">elementary</Dependency>
             <Dependency versionFrom="0.7.3_54504">python-evas</Dependency>
         </RuntimeDependencies>
         <Files>
@@ -44,6 +44,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-12-09</Date>
+            <Version>0.7.3_54504</Version>
+            <Comment>Recompile for ABI breakage in elementary package.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-11-13</Date>
             <Version>0.7.3_54504</Version>
