--- a/programming/language/php/php/pspec.xml
+++ b/programming/language/php/php/pspec.xml
@@ -23,6 +23,8 @@
             <Dependency>libmcrypt-devel</Dependency>
             <Dependency>mit-kerberos</Dependency>
             <Dependency>postgresql-server</Dependency>
+            <Dependency>jpeg-devel</Dependency>
+            <Dependency>freetype-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch>php5-imap-symlink.diff</Patch>
@@ -46,6 +48,9 @@
             <Dependency>libmcrypt</Dependency>
             <Dependency>mit-kerberos</Dependency>
             <Dependency>postgresql-lib</Dependency>
+            <Dependency>openldap-client</Dependency>
+            <Dependency>jpeg</Dependency>
+            <Dependency>freetype</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="config">/etc/php/cli</Path>
@@ -101,6 +106,8 @@
             <Dependency>cyrus-sasl</Dependency>
             <Dependency>php-common</Dependency>
             <Dependency>libmcrypt</Dependency>
+            <Dependency>jpeg</Dependency>
+            <Dependency>freetype</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib/apache2/modules/libphp5.so</Path>
