Forgot the update tag

--- a/programming/language/php/php/pspec.xml
+++ b/programming/language/php/php/pspec.xml
@@ -123,6 +123,13 @@
     </Package>
 
     <History>
+        <Update release="83">
+            <Date>2010-12-09</Date>
+            <Version>5.2.14</Version>
+            <Comment>Fixed dependencies</Comment>
+            <Name>Erdem Bayer</Name>
+            <Email>ebayer@bayer.gen.tr</Email>
+        </Update>
         <Update release="82">
             <Date>2010-12-09</Date>
             <Version>5.2.14</Version>
