conflicted cherrypy2 renamed as python-cherrypy2

--- a/programming/language/python/python-cherrypy/pspec.xml
+++ b/programming/language/python/python-cherrypy/pspec.xml
@@ -18,7 +18,7 @@
     <Package>
         <Name>python-cherrypy</Name>
         <Conflicts>
-            <Package>cherrypy2</Package>
+            <Package>python-cherrypy2</Package>
         </Conflicts>
         <Replaces>
             <Package>cherrypy</Package>
