Own package, version bump

--- a/programming/language/python/python-cssutils/pspec.xml
+++ b/programming/language/python/python-cssutils/pspec.xml
@@ -5,8 +5,8 @@
         <Name>python-cssutils</Name>
         <Homepage>http://code.google.com/p/cssutils/</Homepage>
         <Packager>
-            <Name>Serdar Dalgıç</Name>
-            <Email>serdar@pardus.org.tr</Email>
+            <Name>Çağlar Kilimci</Name>
+            <Email>ckilimci@pardus.org.tr</Email>
         </Packager>
         <License>GPLv3</License>
         <License>LGPLv3</License>
@@ -14,7 +14,7 @@
         <IsA>app:console</IsA>
         <Summary>CSS Cascading Style Sheets library for Python</Summary>
         <Description>python-cssutils is a Python package to parse and build CSS Cascading Style Sheets. DOM only, not any rendering facilities!</Description>
-        <Archive sha1sum="4da2de29ef1bfb77f4091211b6703a357e896896" type="zip">http://cssutils.googlecode.com/files/cssutils-0.9.7b3.zip</Archive>
+        <Archive sha1sum="95a25352ab067c7b13aa82c5f6a5408cf82a2678" type="zip">http://cssutils.googlecode.com/files/cssutils-0.9.7.zip</Archive>
     </Source>
 
     <Package>
@@ -27,6 +27,17 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-12-10</Date>
+            <Version>0.9.7</Version>
+            <Comment>Version bump:
+                API Change: Changed parameters of script/utility function "csscombine"
+                CSS function values using "calc(...)" should be partly parsable
+                "CSSStyleSheet.variables" now contains all available variable values
+            </Comment>
+            <Name>Çağlar Kilimci</Name>
+            <Email>caglar.kilimci@pardus.org.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2010-10-21</Date>
             <Version>0.9.7_beta3</Version>
