--- a/programming/language/python/python-cherrypy/pspec.xml
+++ b/programming/language/python/python-cherrypy/pspec.xml
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="10">
+            <Date>2010-12-10</Date>
+            <Version>3.1.2</Version>
+            <Comment>Conflicted cherrypy2 renamed as python-cherrypy2.</Comment>
+            <Name>Fethican Coşkuner</Name>
+            <Email>fethicanc@gmail.com</Email>
+        </Update>
         <Update release="9">
             <Date>2009-05-22</Date>
             <Version>3.1.2</Version>
