Add patch for python 2.7 compatibility from Fedora

--- a/programming/language/python/python-Cheetah/pspec.xml
+++ b/programming/language/python/python-Cheetah/pspec.xml
@@ -14,6 +14,9 @@
         <Summary>Templating module for Python</Summary>
         <Description>An advanced templating module for Python.</Description>
         <Archive sha1sum="2e84daca803f19c4d69f2db7120af03b602394c8" type="targz">http://pypi.python.org/packages/source/C/Cheetah/Cheetah-2.4.3.tar.gz</Archive>
+        <Patches>
+            <Patch level="1">02_fedora_cheetah_2.7_compat.patch</Patch>
+        </Patches>
     </Source>
 
     <Package>
@@ -32,6 +35,13 @@
     </Package>
 
     <History>
+        <Update release="10">
+            <Date>2010-12-12</Date>
+            <Version>2.4.3</Version>
+            <Comment>Add patch for python 2.7 compatibility from Fedora.</Comment>
+            <Name>Fethican Coşkuner</Name>
+            <Email>fethicanc@gmail.com</Email>
+        </Update>
         <Update release="9">
             <Date>2010-10-13</Date>
             <Version>2.4.3</Version>
